// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerCard list item variant renders correctly 1`] = `
.c0 {
  margin: 10px;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 20px;
  font-size: 1em;
}

<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2 c0"
>
  <div
    className="c1"
  >
    <div>
      Player
    </div>
    <div>
      <strong>
        10
      </strong>
       / 
      31
    </div>
  </div>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      aria-valuenow={32}
      className="MuiLinearProgress-root-28 MuiLinearProgress-colorPrimary-29"
      role="progressbar"
    >
      <div
        className="MuiLinearProgress-bar-36 MuiLinearProgress-barColorPrimary-37 MuiLinearProgress-bar1Determinate-41"
        style={
          Object {
            "transform": "scaleX(0.3225806451612903)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`PlayerCard small variant renders correctly 1`] = `
.c1 {
  margin: 10px;
  position: relative;
}

.c0 {
  width: 220px;
  height: 100px;
  margin: 10px;
}

.c3 {
  grid-area: name;
  font-weight: bold;
  font-size: 1.6em;
  justify-self: center;
  overflow: hidden;
}

.c4 {
  grid-area: score;
  justify-self: center;
}

.c2 {
  display: grid;
  padding: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2em;
  overflow: hidden;
  grid-row-gap: 10px;
  grid-template-areas: 'name' 'score' 'history';
  padding: 20px;
  font-size: 1em;
  grid-row-gap: 10px;
  grid-template-areas: 'name' 'score';
}

<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2 c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      Player
    </div>
    <div
      className="c4"
    >
      <strong>
        10
      </strong>
       / 
      31
    </div>
  </div>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      aria-valuenow={32}
      className="MuiLinearProgress-root-28 MuiLinearProgress-colorPrimary-29"
      role="progressbar"
    >
      <div
        className="MuiLinearProgress-bar-36 MuiLinearProgress-barColorPrimary-37 MuiLinearProgress-bar1Determinate-41"
        style={
          Object {
            "transform": "scaleX(0.3225806451612903)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`PlayerCard standard variant renders correctly 1`] = `
.c0 {
  margin: 10px;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 14px;
}

.c6 {
  min-width: 8px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 3px;
  background: #ffffff;
  box-shadow: 0px 0px 1px 0px black;
}

.c7 {
  min-width: 8px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 3px;
  background: #2f4efb;
  box-shadow: 0px 0px 1px 0px black;
}

.c8 {
  min-width: 8px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin: 3px;
  background: #4caf50;
  box-shadow: 0px 0px 1px 0px black;
}

.c1 {
  display: grid;
  padding: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2em;
  overflow: hidden;
  grid-row-gap: 10px;
  grid-template-areas: 'name' 'score' 'history';
}

.c2 {
  grid-area: name;
  font-weight: bold;
  font-size: 1.6em;
  justify-self: center;
  overflow: hidden;
}

.c3 {
  grid-area: score;
  justify-self: center;
}

.c4 {
  grid-area: history;
  overflow: hidden;
}

<div
  className="MuiPaper-root-1 MuiPaper-elevation2-5 MuiPaper-rounded-2 c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Player
    </div>
    <div
      className="c3"
    >
      <strong>
        10
      </strong>
       / 
      31
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        />
        <div
          className="c7"
        />
        <div
          className="c8"
        />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      aria-valuenow={32}
      className="MuiLinearProgress-root-28 MuiLinearProgress-colorPrimary-29"
      role="progressbar"
    >
      <div
        className="MuiLinearProgress-bar-36 MuiLinearProgress-barColorPrimary-37 MuiLinearProgress-bar1Determinate-41"
        style={
          Object {
            "transform": "scaleX(0.3225806451612903)",
          }
        }
      />
    </div>
  </div>
</div>
`;
